[gd_scene load_steps=7 format=3 uid="uid://cne0e6ok8lj6l"]

[ext_resource type="Script" uid="uid://u0nsxavg73xq" path="res://Enemy/Okręgowy/Okręgowy_Enemy.gd" id="1_7tp5r"]
[ext_resource type="PackedScene" uid="uid://c8eugx1okbj2e" path="res://Enemy/Okręgowy/Bullets/Okręgowy_Bullet.tscn" id="2_t6qk3"]
[ext_resource type="Texture2D" uid="uid://kugnxe0ujlmi" path="res://Art/Emeny/pixil-frame-0 (18).png" id="3_38dq1"]
[ext_resource type="Texture2D" uid="uid://bh4p6dwv0p5t5" path="res://Art/Maro/Atak_maro.png" id="4_bpdb5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vonkd"]
radius = 62.0
height = 124.0

[sub_resource type="CircleShape2D" id="CircleShape2D_38dq1"]
radius = 24.0832

[node name="Okręgowy_Enemy" type="CharacterBody2D" node_paths=PackedStringArray("shoot_timer", "Marker") groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7tp5r")
Bullet = ExtResource("2_t6qk3")
shoot_timer = NodePath("shoot_timer")
Marker = NodePath("Sprite2D/Marker2D")

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_vonkd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(6.66, 6.66)
texture = ExtResource("3_38dq1")

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
scale = Vector2(1.20755, 1.92453)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Marker2D"]
position = Vector2(8.45531, -0.312077)
scale = Vector2(0.022754, 0.0113232)
texture = ExtResource("4_bpdb5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="another_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -50.0
offset_top = -60.0
offset_right = 52.0
offset_bottom = -33.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_38dq1")

[node name="Can_Shoot_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="nav_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="shoot_timer" to="." method="can_shoot"]
[connection signal="timeout" from="Can_Shoot_Timer" to="." method="_on_can_shoot_timer_timeout"]
